--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="ActionLoggerSample">
+    <wb-module deploy-name="ActionLoggerSample.006">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="ActionLoggerSample"/>
-        <property name="java-output-path" value="/ActionLoggerSample/build/classes"/>
+        <property name="context-root" value="ActionLoggerSample.006"/>
+        <property name="java-output-path" value="/ActionLoggerSample.006/build/classes"/>
     </wb-module>
 </project-modules>
